<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_snes_system"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="christopher_fontana.mycollection.SnesSystem">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/supernintendosystem"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/Snes"
        android:contentDescription="@string/Snes" />

    <TextView
        android:text="@string/txtTitle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTitle4"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <TextView
        android:text="@string/txtSnesFact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/txtSnesFact1"
        android:textSize="18sp" />

    <TextView
        android:text="@string/txtSnesFact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSnesFact1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/txtSnesFact2"
        android:textSize="18sp" />
</RelativeLayout>
