<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_genesis_system"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="christopher_fontana.mycollection.GenesisSystem">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/genesissystem"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/genesis"
        android:contentDescription="@string/genesis" />

    <TextView
        android:text="@string/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:id="@+id/txtTitle2"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtSegaFact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:id="@+id/txtSegaFact1"
        android:textSize="18sp" />

    <TextView
        android:text="@string/txtSegaFact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/txtSegaFact2"
        android:textSize="18sp"
        android:layout_below="@+id/txtSegaFact1"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
