<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nintendo_system"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="christopher_fontana.mycollection.NintendoSystem">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nintendosystem"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/Nes"
        android:contentDescription="@string/Nes" />

    <TextView
        android:text="@string/txtTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTitle3"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtNesFact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/txtNesFact2"
        android:textSize="18sp"
        android:layout_below="@+id/txtNesFact1"
        android:layout_alignLeft="@+id/txtTitle3"
        android:layout_alignStart="@+id/txtTitle3" />

    <TextView
        android:text="@string/txtNesFact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:id="@+id/txtNesFact1"
        android:textSize="18sp"
        android:layout_below="@+id/txtTitle3"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
